# rustle

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: clipboard.rs  config.rs  error.rs  hotkey.rs  icons.rs  launcher.rs  main.rs  search.rs  utils.rs  window.rs
